# tower

./: .gitignore  LICENSE  README.md  cabal.project  cabal.project.local.ci  ci.dhall
.github/workflows/: ci.yaml
tower/: tower.cabal
tower-aadl/: tower-aadl.cabal
tower-aadl/src/Tower/: AADL.hs
tower-aadl/src/Tower/AADL/: CodeGen.hs  Priorities.hs  Threads.hs
tower-aadl/src/Tower/AADL/AST/: Common.hs
tower-aadl/test-echronos/: Simple.hs
tower-config/: tower-config.cabal
tower-config/src/Ivory/Tower/Config/: Parser.hs  Preprocess.hs
tower-config/tests/resources1/: root.config
tower-config/tests/resources2/resources3/: child3.config
tower-hal/: tower-hal.cabal
tower-hal/src/Ivory/Tower/HAL/: RingBuffer.hs
tower-hal/src/Ivory/Tower/HAL/Bus/CAN/: Sched.hs
tower-mini/: tower-mini.cabal
tower-mini/src/Tower/: Mini.hs
tower-mini/src/Tower/Mini/: Component.hs
tower-mini/test/: Integrated.hs
tower/src/Ivory/Tower/: Backend.hs  Coroutine.hs  Handler.hs  Monitor.hs  Options.hs  Tower.hs
tower/src/Ivory/Tower/AST/: Chan.hs  Comment.hs  Emitter.hs  Graph.hs  Handler.hs  Monitor.hs  Period.hs  Signal.hs  SyncChan.hs  Tower.hs
tower/src/Ivory/Tower/Monad/: Base.hs  Handler.hs  Monitor.hs  Tower.hs
tower/src/Ivory/Tower/SrcLoc/: Location.hs
tower/src/Ivory/Tower/Types/: Chan.hs  ChanMap.hs  Dependencies.hs  Emitter.hs  SignalCode.hs  ThreadCode.hs  Time.hs
