cabal-version:       2.2
name:                tower-hal
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
build-type:          Simple

library
  exposed-modules:     Ivory.Tower.HAL.RingBuffer,
                       Ivory.Tower.HAL.Bus.CAN,
                       Ivory.Tower.HAL.Bus.Interface,
                       Ivory.Tower.HAL.Bus.Sched,
                       Ivory.Tower.HAL.Bus.SchedAsync,
                       Ivory.Tower.HAL.Bus.Sched.Internal,
                       Ivory.Tower.HAL.Bus.I2C,
                       Ivory.Tower.HAL.Bus.UART,
                       Ivory.Tower.HAL.Bus.SPI,
                       Ivory.Tower.HAL.Bus.SPI.DeviceHandle,
                       Ivory.Tower.HAL.Bus.CAN.Sched,
                       Ivory.Tower.HAL.Bus.CAN.Fragment,
                       Ivory.Tower.HAL.Bus.I2C.DeviceAddr
  build-depends:       base >=4.6,
                       ivory,
                       ivory-serialize,
                       ivory-stdlib,
                       tower
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
